# TvarBook

./: README.md  pynet.postman_collection.git.json  pyproject.toml
pynet/: .env
pynet/base/: permissions.py
pynet/basse/: classes.py  serializers.py
pynet/config/: settings.py  urls.py
pynet/feed/: services.py  urls.py
pynet/followers/migrations/: 0001_initial.py
pynet/message/: models.py  serializers.py  urls.py  views.py
pynet/message/migrations/: 0001_initial.py  0002_alter_message_options_rename_author_message_user_and_more.py  0003_message_content.py
pynet/profiles/: admin.py  models.py  routers.py  serializers.py  urls.py  views.py
pynet/profiles/migrations/: 0001_initial.py  0002_usernet_first_login_usernet_middle_name_and_more.py  0003_usernet_bio_usernet_birth_date_usernet_gender_and_more.py  0004_alter_usernet_middle_name_alter_usernet_phone_number.py  0005_alter_usernet_middle_name.py  0006_alter_usernet_middle_name.py  0007_alter_usernet_middle_name.py  0008_technology_usernet_technology.py  0009_remove_usernet_technology_delete_technology.py
pynet/wall/: models.py  serializers.py  views.py
pynet/wall/migrations/: 0001_initial.py
