[tool.poetry]
name = "pynet"
version = "0.1.0"
description = ""
authors = ["raman162 <amazingbublik162@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
djangorestframework = "^3.14.0"
pillow = "^10.2.0"
djoser = "^2.2.2"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
